Adds username to rsync bit

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,4 +28,4 @@ jobs:
           options: ''
           ssh_options: ''
           src: 'html/'
-          dest: 'recipes.mousereeve.com:~/recipes/html'
+          dest: 'mouse@recipes.mousereeve.com:~/recipes/html'
